--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   background-image: url("assets/motherboard-wallpaper.jpg");
   background-size: cover;
+  background-position: center;
   background-attachment: fixed;
 }
 
